--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,221 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;;
+    padding: 0;
+}
+a {
+    color: #222;
+    text-decoration: none;
+}
+button {
+    cursor: pointer;
+}
+ul,li,ol,dl,dd,dt {
+    list-style: none;
+}
+h1,h2,h3,h4,h5,h6 {
+    font-size: 14px;
+    font-weight: normal;
+}
+strong {
+    font-weight: normal;
+}
+em {
+    font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/* navbar */
+.login-wrap {
+    position: relative;
+    padding: 30px;
+    display: flex;
+    justify-content: flex-end;
+}
+.login-wrap #login-btn {
+    background: transparent;
+    border: none;
+    font-size: 16px;
+}
+.login-wrap #login-btn::after {
+    content:'로그인'; 
+    padding-left: 5px;   
+}
+.login-wrap #login-btn.true::after {
+    content:'로그아웃';    
+}
+.login-wrap .hamburger {
+    display: none;
+    position:  absolute;
+    left: 30px;
+    top: 26px;
+    background: transparent;
+    border: none;
+    font-size: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo-wrap {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+.menu-wrap {
+    position: relative;
+    display: flex;
+    justify-content: center;
+}
+.menu-wrap ul {
+    display: flex;
+}
+.menu-wrap li a {
+    display: block;
+    padding: 10px;
+    font-size: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.menu-wrap .form-box {
+    position:  absolute;
+    right: 20px;
+    top: 0;
+    padding: 5px;
+    border-bottom: 1px solid #000;
+}
+.form-box [type='text'] {
+    margin-left: 10px;
+    border: none;
+}
+.form-box [type='text']::placeholder {
+    font-size: 13px;
+    color: #999;
 }
 
-.App-link {
-  color: #61dafb;
+.form-box [type='text']:focus {
+    outline: none;
+}
+.mobile-menu {
+    display: none;
+}
+/* product card */
+.card {
+    border: none;
+    background: #fff;
+    margin-bottom: 3px;
+}
+.card:hover {
+    transform: scale(1.1);
+    z-index: 1;
+}
+.card img {
+    display: block;
+}
+.card .choice {
+    display: inline-block;
+    height: 20px;
+    color: #63786a;
+    font-size: 11px;
+    font-weight: bold;
+}
+.card h3 {
+    margin-bottom: 0;
+    padding: 2px 0;
+    font-size: 16px;
+}
+.card h3 .yellow {
+    background: yellow;
+}
+.card strong {
+    display: block;
+    font-weight: normal;
+}
+.card em {
+    height: 20px;
+    font-size: 11px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* login page */
+.login-form {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+}
+
+.login-form .container {
+    display: flex;
+    justify-content: center;
+}
+.login-form form {
+    width:  600px;
+}
+
+.login-form input {
+    margin-bottom: 20px;
+}
+
+/* detail page */
+.detail-wrap img {
+    width: 100%;
+}
+
+.detail-wrap .desc-box h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+.detail-wrap .desc-box strong {
+    display: block;
+    font-size: 20px;
+
+}
+.detail-wrap .desc-box span {
+    display: inline-block;
+    margin-bottom: 20px;
+    height: 20px;
+    font-size: 11px;
+    color: #63786a;
+    font-weight: bold;
+}
+.detail-wrap .desc-box .select-size {
+    margin-bottom: 20px
+}
+.detail-wrap .desc-box .btn-cart {
+    width: 100%;
+}
+
+
+/* 반응형 */
+@media (max-width: 1024px){
+    .login-wrap .hamburger {display: block;}
+    .menu-wrap {display: none;}
+    .mobile-menu {
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 2;
+        padding: 50px 80px;
+        background: #deb887;
+        text-align: center;
+        box-sizing: border-box;
+        transform: translateX(-100%);
+        transition: all 0.3s ease-in;
+    }
+    .mobile-menu.active {
+        transform: translateX(0);
+    }
+    .mobile-menu .close-btn {
+        position: absolute;
+        right: 25px;
+        top: 10px;   
+        background: transparent;
+        border: none;
+        font-size:  25px;
+    }
+    .mobile-menu ul {
+        padding: 0;
+    }
+    .mobile-menu li {
+        padding: 10px 0;
+    }
+    .mobile-menu li a {
+        display: block;
+    }
 }
