--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,9 @@ em {
     font-style: normal;
 }
 
+body {
+    background: #faf9f8;
+}
 
 /* navbar */
 .login-wrap {
@@ -52,7 +55,14 @@ em {
     border: none;
     font-size: 20px;
 }
-
+.login-wrap .go-fav-btn {
+    margin-left: 10px;
+    background: transparent;
+    border: none;
+}
+.login-wrap .go-fav-btn svg {
+    margin-right: 3px;
+}
 .logo-wrap {
     margin-bottom: 20px;
     display: flex;
@@ -82,6 +92,7 @@ em {
 .form-box [type='text'] {
     margin-left: 10px;
     border: none;
+    background: transparent; 
 }
 .form-box [type='text']::placeholder {
     font-size: 13px;
@@ -94,18 +105,35 @@ em {
 .mobile-menu {
     display: none;
 }
+
 /* product card */
 .card {
     border: none;
     background: #fff;
-    margin-bottom: 3px;
+    margin-bottom: 15px;
+    transition: all 0.3s ease-in-out;
 }
 .card:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
     z-index: 1;
 }
-.card img {
+.card .img-box {
+    position: relative;
+}
+.card .img-box img {
     display: block;
+    width: 100%;
+}
+.card .img-box .fav-btn {
+    position:  absolute;
+    right: 10px;
+    bottom: 10px;
+    font-size: 25px;
+    background: transparent;
+    border: none;
+}
+.card .img-box .fav-btn.active {
+    color: red;
 }
 .card .choice {
     display: inline-block;
@@ -130,6 +158,7 @@ em {
     height: 20px;
     font-size: 11px;
 }
+
 
 /* login page */
 .login-form {
@@ -177,6 +206,49 @@ em {
 }
 .detail-wrap .desc-box .btn-cart {
     width: 100%;
+}
+
+/* favorite page */
+.fav-wrap h2 {
+    padding: 30px 0;
+    text-align:  center;
+    font-size: 20px;
+    font-weight: bold;
+}
+.fav-card {
+    margin-bottom:  10px;
+}
+.fav-card .img-box {
+    position: relative;
+    overflow: hidden;
+}
+.fav-card img {
+    display: block;
+    margin: 0 auto;
+    width: 100%;;
+    transition: all 0.3s ease-in;
+}
+.fav-card:hover img {
+    transform: scale(1.1);
+}
+.fav-card .remove-btn {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    font-size: 20px;
+    border: none;
+    background: transparent;
+}
+.fav-card .remove-btn:hover {
+    color: #888;
+}
+.fav-card h3 {
+    padding: 10px 0 5px;
+    margin: 0;
+    font-size: 16px;
+}
+.fav-card strong {
+    font-weight: bold;
 }
 
 
