--- a/src/App.css
+++ b/src/App.css
@@ -33,14 +33,14 @@ header {
 }
 .login-wrap {
     position: relative;
-    padding: 30px;
+    padding: 30px 30px 10px;
     display: flex;
     justify-content: flex-end;
 }
 .login-wrap #login-btn {
     background: transparent;
     border: none;
-    font-size: 16px;
+    font-size: 14px;
 }
 .login-wrap #login-btn::after {
     content:'로그인'; 
@@ -62,12 +62,91 @@ header {
     margin-left: 10px;
     background: transparent;
     border: none;
+    font-size: 14px;
 }
 .login-wrap .go-fav-btn svg {
     margin-right: 3px;
 }
+
+.login-wrap .shop-preview {
+    position: relative;
+    margin-top: -2px;
+}
+.login-wrap .shop-preview .cart-btn {
+    margin-left: 10px;
+    background: transparent;
+    border: none;
+    font-size: 14px;
+}
+.login-wrap .shop-preview .cart-btn svg {
+    margin-right: 3px;
+}
+.shop-preview .preview-wrap {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    padding: 30px;
+    min-width: 350px;
+    background: #fff;
+    font-size: 14px;
+    color: #888;
+    z-index: 3;
+}
+.shop-preview:hover .preview-wrap {
+    display: block;
+}
+.preview-wrap ul {
+    padding-left: 0;
+}
+.preview-wrap li {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    border-top: 1px solid #f0f0f0;
+}
+.preview-wrap li:first-child {
+    border-top: none;
+}
+.preview-wrap li .img-box {
+    display: inline-block;
+    margin-right: 10px;
+    width: 60px;
+}
+.preview-wrap li .img-box img {
+    width: 100%;
+} 
+.preview-wrap li .txt-box {
+    text-align: right;
+}
+.preview-wrap li .delete-btn {
+    position: absolute;
+    right: 0;
+    top: 10px;
+    background: transparent;
+    border: none;
+}
+.shop-preview .sum-wrap {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 20px;
+    border-top: 1px solid #666;
+    font-size: 16px;
+    color: #333;
+}
+.shop-preview .pay-btn {
+    margin-top: 5px;
+    padding: 5px 0;
+    width: 100%;
+    border: none;
+    background: black;
+    color: #fff;
+}
 .logo-wrap {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     display: flex;
     justify-content: center;
 }
@@ -75,12 +154,15 @@ header {
     position: relative;
     display: flex;
     justify-content: center;
+    margin-bottom: 80px;
 }
 .menu-wrap ul {
     display: flex;
+    margin-bottom: 0;
 }
 .menu-wrap li {
     padding: 0 10px;
+    line-height: 40px;
 }
 .menu-wrap li a {
     position: relative;
@@ -97,7 +179,7 @@ header {
     width: 0;
     height: 1px;
     background: #000;
-    /* transition: width 0.3s ease-in-out; */
+    transition: width 0.3s ease-in-out;
 }
 .menu-wrap li a:hover::before {
     width: 100%;
@@ -130,10 +212,10 @@ header {
 /* product card */
 .card {
     border: none;
-    background: #fff;
     margin-bottom: 15px;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
+    background: transparent;
 }
 .card:hover {
     transform: scale(1.05);
@@ -191,12 +273,18 @@ header {
     font-size: 11px;
 }
 
+/* product page */
+.loading-row {
+    display: flex;
+    justify-content: center;
+}
+
 
 /* login page */
 .login-form {
     display: flex;
     justify-content: center;
-    padding-top: 30px;
+    padding: 30px 0 100px;
 }
 
 .login-form .container {
@@ -206,24 +294,29 @@ header {
 .login-form form {
     width:  600px;
 }
-
+.login-form label {
+    letter-spacing: -1px;
+}
 .login-form input {
     margin-bottom: 20px;
+}
+.login-form button {
+    margin-right: 10px;
 }
 
 /* detail page */
 .detail-wrap img {
     width: 100%;
 }
-
 .detail-wrap .desc-box h3 {
-    font-size: 20px;
-    margin-bottom: 10px;
+    padding: 20px 0 10px;
+    font-size: 25px;
+    font-weight: bold;
 }
 .detail-wrap .desc-box strong {
     display: block;
-    font-size: 20px;
-
+    font-size: 25px;
+    font-weight: bold;
 }
 .detail-wrap .desc-box span {
     display: inline-block;
@@ -236,16 +329,38 @@ header {
 .detail-wrap .desc-box .select-size {
     margin-bottom: 20px
 }
-.detail-wrap .desc-box .btn-cart {
+.detail-wrap .desc-box .btn-cart,
+.detail-wrap .desc-box .btn-buy {
+    margin-bottom: 10px;
     width: 100%;
 }
-
 /* favorite page */
 .fav-wrap h2 {
     padding: 30px 0;
     text-align:  center;
     font-size: 20px;
     font-weight: bold;
+}
+.no-fav-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 400px;
+    text-align: center;
+}
+.no-fav-row p {
+    padding: 30px 0;
+    font-size: 14px;
+}
+.no-fav-row a {
+    padding: 15px;
+    display: inline-block;
+    background: #000;
+    color: #fff;
+}
+.no-fav-row a:hover {
+    background: #444;
 }
 .fav-card {
     margin-bottom:  10px;
@@ -283,10 +398,41 @@ header {
     font-weight: bold;
 }
 
+/* footer */
+footer {
+    margin-top: 150px;
+    padding: 80px 32px;
+    background: #e4e4e4;
+}
+footer p {
+    font-weight: bold;
+}
+footer address {
+    margin-bottom: 30px;
+    font-size: 14px;
+}
+footer h2 {
+    margin: 0 auto;
+    max-width: 40px;
+}
+footer h2 img {
+    width: 100%;
+}
 
 /* 반응형 */
 @media (max-width: 1024px){
+    /* navbar */
+    .login-wrap {
+        padding:  30px 5%;
+    }
     .login-wrap .hamburger {display: block;}
+    .login-wrap .go-fav-btn span,
+    .login-wrap .cart-btn span {
+        display: none;
+    }
+    .shop-preview:hover .preview-wrap {
+        display: none;
+    }
     .menu-wrap {display: none;}
     .mobile-menu {
         display: block;
@@ -321,5 +467,17 @@ header {
     }
     .mobile-menu li a {
         display: block;
+    }
+    /* detail page */
+    .detail-wrap .desc-box h3 {
+        font-size: 20px;
+        line-height: 1.5;
+    }
+    .detail-wrap .desc-box strong {
+        font-size: 20px;
+    }
+    /* footer */
+    footer {
+        margin-top: 100px;
     }
 }
